# QuantPilot

./: .env.example  .env.prod.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.backtest-local.yml  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_phase2_index_ohlcv_components.py  0003_phase3_phase4_nullable_constraints.py  0004_phase5_signal_snapshot_unique.py  0005_daily_portfolio_value.py  0006_phase8_backtest_tables.py  0007_phase10_config_and_notifications.py  0008_seed_default_account.py  0009_phase11_scoring_industrialization.py  0010_phase12_factor_lineage_columns.py  0011_phase12_attribution_history.py  0012_phase13_data_quality.py  0013_phase14_fund_flow_idempotency.py  0014_phase14_factor_ic_row_type.py  0015_trade_calendar.py  0016_trade_fundflow_void.py  0017_merge_factor_ic_history.py  0018_user_multiuser.py  0019_report_account_id.py  0020_notification_account_id.py
backend/scripts/: audit_data_integrity.py  backfill_attribution_history.py  backfill_candidate_pool.py  backfill_daily_ic.py  backfill_icir_rebalance.py  backfill_is_st.py  check_backtest_tasks.py  compare_strategy_ic_panels.py  pipeline_multi_date.py  refill_history.py  rm17_acceptance.py  run_backtest_local.py  seed_demo_data.py  slippage_sensitivity.py  validate_ic_timeseries.py
backend/src/quantpilot/: main.py
backend/tests/: conftest.py
(+403 files in other folders)
