[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantpilot"]

[project]
name = "quantpilot"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    # Web 框架
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # 数据库
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # 缓存
    "redis>=5.0",
    # 认证（PyJWT 替代 python-jose，无已知 CVE）
    "PyJWT[crypto]>=2.8",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    # 量化计算（Phase 2+ 使用，提前锁定版本）
    "pandas>=2.2",
    "numpy>=1.26",
    "pandas-ta>=0.3.14b",
    "scipy>=1.12",
    "statsmodels>=0.14",
    # 调度
    "apscheduler>=3.10",
    # 数据源（Phase 2 使用）
    "tushare>=1.4",
    "akshare>=1.12",
    # HTTP 客户端（WxPusher 推送，Phase 10 使用）
    "httpx>=0.27",
    # 配置导入导出（Phase 10 §6.9 YAML 备份/恢复）
    "PyYAML>=6.0",
    "prometheus-client>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.3",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "factory-boy>=3.3",
    "faker>=24.0",
    "testcontainers[postgres]>=4.4",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
